Fixes some wierd layout issues

--- a/air/assets/css/app.css
+++ b/air/assets/css/app.css
@@ -4,7 +4,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  min-height: 100%;
 }
 
 a {
@@ -20,8 +20,6 @@ a {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
 }
 
